[tool.poetry]
name = "aws-stepfunctions-models"
version = "0.1.0"
description = "AWS Step Function definition validation via Pydantic!"
authors = ["Uriel Mandujano <5422638+konkolorado@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.0"
arrow = "^1.2.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
pytest = "^8.3.4"
pytest-icdiff = "^0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
